e2e-tests/tests/snapshots/martin_cp__postgres__array_props_metadata.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: metadata
---
agg_tiles_hash = D6392A3A5AEC4FD531A65E002885471A
bounds = -180,-90,180,90
description = Array and jsonb columns, which ST_AsMVT writes as text and as one property per top-level key
format = mlt
generator = martin cp v0.0.0
hash_algorithm = md5
json = {
  "vector_layers": [
    {
      "fields": {
        "doc": "jsonb",
        "label": "text",
        "tags": "int4"
      },
      "id": "array_props"
    }
  ]
}
maxzoom = 0
minzoom = 0
name = array_props
