e2e-tests/tests/snapshots/martin_cp__postgres__dimensioned_shapes_0_0_0.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: mlt_dump(&direct)
---
layer dimensioned_shapes extent 4096
  id=Some(1) geom=POINT(2048 2048) props=[dims=Str(Some("xy")), kind=Str(Some("point"))]
  id=Some(11) geom=POINT(2048 2048) props=[dims=Str(Some("xyz")), kind=Str(Some("point"))]
  id=Some(12) geom=LINESTRING(2162 2048,2276 1934,2389 2048) props=[dims=Str(Some("xyz")), kind=Str(Some("linestring"))]
  id=Some(13) geom=POLYGON((2503 2048,2503 1816,2731 1816,2731 2048,2503 2048),(2674 1875,2560 1875,2560 1991,2674 1991,2674 1875)) props=[dims=Str(Some("xyz")), kind=Str(Some("polygon"))]
  id=Some(14) geom=MULTIPOINT(2844 2048,2958 1934) props=[dims=Str(Some("xyz")), kind=Str(Some("multipoint"))]
  id=Some(15) geom=MULTILINESTRING((3072 2048,3186 1934),(3072 1934,3186 2048)) props=[dims=Str(Some("xyz")), kind=Str(Some("multilinestring"))]
  id=Some(16) geom=MULTIPOLYGON(((3300 2048,3300 1934,3413 1934,3413 2048,3300 2048)),((3470 2048,3470 1934,3584 1934,3584 2048,3470 2048))) props=[dims=Str(Some("xyz")), kind=Str(Some("multipolygon"))]
  id=Some(17) geom=LINESTRING(3641 1934,3755 1816) props=[dims=Str(Some("xyz")), kind=Str(Some("geometrycollection"))]
  id=Some(2) geom=LINESTRING(2162 2048,2276 1934,2389 2048) props=[dims=Str(Some("xy")), kind=Str(Some("linestring"))]
  id=Some(21) geom=POINT(2048 2048) props=[dims=Str(Some("xym")), kind=Str(Some("point"))]
  id=Some(22) geom=LINESTRING(2162 2048,2276 1934,2389 2048) props=[dims=Str(Some("xym")), kind=Str(Some("linestring"))]
  id=Some(23) geom=POLYGON((2503 2048,2503 1816,2731 1816,2731 2048,2503 2048),(2674 1875,2560 1875,2560 1991,2674 1991,2674 1875)) props=[dims=Str(Some("xym")), kind=Str(Some("polygon"))]
  id=Some(24) geom=MULTIPOINT(2844 2048,2958 1934) props=[dims=Str(Some("xym")), kind=Str(Some("multipoint"))]
  id=Some(25) geom=MULTILINESTRING((3072 2048,3186 1934),(3072 1934,3186 2048)) props=[dims=Str(Some("xym")), kind=Str(Some("multilinestring"))]
  id=Some(26) geom=MULTIPOLYGON(((3300 2048,3300 1934,3413 1934,3413 2048,3300 2048)),((3470 2048,3470 1934,3584 1934,3584 2048,3470 2048))) props=[dims=Str(Some("xym")), kind=Str(Some("multipolygon"))]
  id=Some(27) geom=LINESTRING(3641 1934,3755 1816) props=[dims=Str(Some("xym")), kind=Str(Some("geometrycollection"))]
  id=Some(3) geom=POLYGON((2503 2048,2503 1816,2731 1816,2731 2048,2503 2048),(2674 1875,2560 1875,2560 1991,2674 1991,2674 1875)) props=[dims=Str(Some("xy")), kind=Str(Some("polygon"))]
  id=Some(31) geom=POINT(2048 2048) props=[dims=Str(Some("xyzm")), kind=Str(Some("point"))]
  id=Some(32) geom=LINESTRING(2162 2048,2276 1934,2389 2048) props=[dims=Str(Some("xyzm")), kind=Str(Some("linestring"))]
  id=Some(33) geom=POLYGON((2503 2048,2503 1816,2731 1816,2731 2048,2503 2048),(2674 1875,2560 1875,2560 1991,2674 1991,2674 1875)) props=[dims=Str(Some("xyzm")), kind=Str(Some("polygon"))]
  id=Some(34) geom=MULTIPOINT(2844 2048,2958 1934) props=[dims=Str(Some("xyzm")), kind=Str(Some("multipoint"))]
  id=Some(35) geom=MULTILINESTRING((3072 2048,3186 1934),(3072 1934,3186 2048)) props=[dims=Str(Some("xyzm")), kind=Str(Some("multilinestring"))]
  id=Some(36) geom=MULTIPOLYGON(((3300 2048,3300 1934,3413 1934,3413 2048,3300 2048)),((3470 2048,3470 1934,3584 1934,3584 2048,3470 2048))) props=[dims=Str(Some("xyzm")), kind=Str(Some("multipolygon"))]
  id=Some(37) geom=LINESTRING(3641 1934,3755 1816) props=[dims=Str(Some("xyzm")), kind=Str(Some("geometrycollection"))]
  id=Some(4) geom=MULTIPOINT(2844 2048,2958 1934) props=[dims=Str(Some("xy")), kind=Str(Some("multipoint"))]
  id=Some(5) geom=MULTILINESTRING((3072 2048,3186 1934),(3072 1934,3186 2048)) props=[dims=Str(Some("xy")), kind=Str(Some("multilinestring"))]
  id=Some(6) geom=MULTIPOLYGON(((3300 2048,3300 1934,3413 1934,3413 2048,3300 2048)),((3470 2048,3470 1934,3584 1934,3584 2048,3470 2048))) props=[dims=Str(Some("xy")), kind=Str(Some("multipolygon"))]
  id=Some(7) geom=LINESTRING(3641 1934,3755 1816) props=[dims=Str(Some("xy")), kind=Str(Some("geometrycollection"))]
