e2e-tests/tests/snapshots/martin_cp__postgres__function_source_metadata.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: metadata
---
agg_tiles_hash = 9B931A386D6075D1DA55323BD4DBEDAE
description = public.function_zxy_query_test
format = pbf
generator = martin cp v0.0.0
hash_algorithm = md5
maxzoom = 6
minzoom = 0
name = function_zxy_query_test
