e2e-tests/tests/snapshots/martin_cp__postgres__function_source_mlt_metadata.snap
---
source: e2e-tests/tests/martin_cp.rs
expression: metadata
---
agg_tiles_hash = 4F33786821F20C360EC0DE42D6BFCFA8
description = public.function_zxy_query_test
format = mlt
generator = martin cp v0.0.0
hash_algorithm = md5
maxzoom = 0
minzoom = 0
name = function_zxy_query_test
